# pyOfelia

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  example-config.ini  ofelia.sh  pyproject.toml
pyofelia/: __main__.py  util.py
